# cloudru_devopscamp

./: README.md
app/: Dockerfile  main.py  poetry.toml  pyproject.toml
helm/webapp/: Chart.yaml  values.yaml
helm/webapp/templates/: deployment.yaml  service.yaml
manifest/: README.md  webApp.yaml
playbook/: README.md  hosts  secrets.yaml  setup_host.yaml
