[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "test app for cloudru contest"
authors = ["arteom <plzd@ntcry.ru>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.68.1"
uvicorn = "0.15.0"

[tool.poetry.group.dev.dependencies]
fastapi = "0.68.1"
uvicorn = "0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
